# Projet-Element_fini

./: code maillage python
Projet_ElementsFinis_final/: CMakeLists.txt  results.txt
Projet_ElementsFinis_final/data/: mesh.txt  problem.txt
Projet_ElementsFinis_final/src/: fem.c  fem.h  glfem.c  glfem.h  homework.c  main.c
Projet_ElementsFinis_ok/data/: CMakeCache.txt  Makefile  cmake_install.cmake
Projet_ElementsFinis_ok/data/glfw/: Makefile  cmake_install.cmake
Projet_ElementsFinis_ok/data/glfw/src/: Makefile  cmake_install.cmake
Projet_ElementsFinis_ok/src/: fem.c  fem.h  homework.c  main.c
exemples/gp-fem-25-main/: CMakeLists.txt  README.md  benchmark.c  benchmark.h  plot.py  validate.py
exemples/gp-fem-25-main/data/: UV_ref.txt  mesh.txt
exemples/gp-fem-25-main/genmesh/: .gitignore  CMakeLists.txt
exemples/gp-fem-25-main/genmesh/glfw/: CMakeLists.txt
exemples/gp-fem-25-main/genmesh/src/: fem.c  fem.h  geometry.c  glfem.c  main.c
exemples/gp-fem-25-main/project/: CMakeLists.txt  example.c  fem.c  fem.h
exemples/group075-mdelsart-aantonutti-rapport copy/ProjectPostProcessor/src/: main.c
exemples/group075-mdelsart-aantonutti-rapport copy/ProjectPreProcessor/: CMakeLists.txt
exemples/group075-mdelsart-aantonutti-rapport copy/ProjectPreProcessor/src/: main_projet.c
exemples/group075-mdelsart-aantonutti-rapport copy/Rapport/data/: UV.txt  problem.txt
exemples/group075-mdelsart-aantonutti-rapport/ProjectPreProcessor/: CMakeLists.txt
group075-mdelsart-aantonutti-rapport copy/ProjectPreProcessor/src/: homework.c  projet.c
group075-mdelsart-aantonutti-rapport copy/Rapport/data/: mesh.txt
groupe092-bbognar-lnoirot/: CMakeLists.txt
groupe092-bbognar-lnoirot/old/src/: exec  homework.c  main.c  structure_projet.c
groupe092-bbognar-lnoirot/src/: elast_fem.c  elast_fem.h  elast_glfem.c  elast_glfem.h  elasticity.c  geo_fem.c  geo_fem.h  geo_glfem.c  geo_glfem.h  geometry.c  main.c  slv_fem.c  slv_fem.h  slv_glfem.c  slv_glfem.h  solver.c
